--- a/app/src/main/res/layout/santa_background.xml
+++ b/app/src/main/res/layout/santa_background.xml
@@ -13,6 +13,7 @@
             android:layout_height="match_parent"
             android:background="@drawable/round_ractangle_bottom_background"
             android:elevation="@dimen/elevation_shadow"
+            android:outlineSpotShadowColor="@color/shadow_gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
