--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -70,6 +70,7 @@
 
     <declare-styleable name="SantaBottomButton">
         <attr name="isGrayButton" format="boolean"/>
+        <attr name="darkShadow" format="boolean" />
     </declare-styleable>
 
 </resources>
