--- a/app/src/main/res/layout/santa_edit_text.xml
+++ b/app/src/main/res/layout/santa_edit_text.xml
@@ -14,24 +14,42 @@
         android:backgroundTint="@color/gray_1"
         android:paddingHorizontal="@dimen/padding_santaedittext_root_horizontal">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/edittext_santaedittext"
+        <FrameLayout
+            android:id="@+id/framelayout_santaedittext"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/margin_santaedittext_edittext_vertical"
-            android:singleLine="true"
             android:layout_marginEnd="@dimen/padding_santaedittext_root_horizontal"
-            android:background="@null"
-            android:fontFamily="@font/notosans_font_family"
-            android:textSize="@dimen/size_santaedittext"
-            android:lineHeight="23.68dp"
-            android:letterSpacing="-0.03"
-            android:textColor="@drawable/color_santaedittext_edittext"
-            android:textCursorDrawable="@drawable/cursor_edittext"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/santasmallbutton_santaedittext"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/edittext_santaedittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:fontFamily="@font/notosans_font_family"
+                android:letterSpacing="-0.03"
+                android:lineHeight="23.68dp"
+                android:singleLine="true"
+                android:textColor="@drawable/color_santaedittext_edittext"
+                android:textCursorDrawable="@drawable/cursor_edittext"
+                android:textSize="@dimen/size_santaedittext" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textview_santaedittext_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:letterSpacing="-0.03"
+                android:lineHeight="23.68dp"
+                android:singleLine="true"
+                android:textSize="@dimen/size_santaedittext" />
+
+        </FrameLayout>
+
 
         <org.sopt.santamanitto.view.SantaSmallButton
             android:id="@+id/santasmallbutton_santaedittext"
@@ -40,7 +58,7 @@
             android:layout_marginVertical="@dimen/margin_santaedittext_button_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/edittext_santaedittext"
+            app:layout_constraintStart_toEndOf="@id/framelayout_santaedittext"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
