--- a/app/src/main/res/layout/santa_edit_text.xml
+++ b/app/src/main/res/layout/santa_edit_text.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/round_ractangle_background"
@@ -46,7 +46,7 @@
                 android:letterSpacing="-0.03"
                 android:lineHeight="23.68dp"
                 android:singleLine="true"
-                android:textSize="@dimen/size_santaedittext" />
+                android:textSize="@dimen/size_santaedittext"/>
 
         </FrameLayout>
 
