--- a/app/src/main/res/layout/fragment_condition.xml
+++ b/app/src/main/res/layout/fragment_condition.xml
@@ -19,7 +19,8 @@
             android:id="@+id/santabackground_condition"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:backgroundText="@string/entername_background_welcome"
+            style="@style/SantaBackground.BigTitle"
+            app:bigTitle="@string/entername_background_welcome"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.396"
             app:layout_constraintStart_toStartOf="parent"
