--- a/app/src/main/res/layout/fragment_manitto_room_finish.xml
+++ b/app/src/main/res/layout/fragment_manitto_room_finish.xml
@@ -20,19 +20,18 @@
 
         <org.sopt.santamanitto.view.SantaBackground
             android:id="@+id/santabackground_finish"
+            style="@style/SantaBackground.ResultTask"
             setFinishDescription="@{viewModel.period}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:backKey="true"
-            app:backgroundStyle="onlyText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.396"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:noLogoTitle="@{viewModel.roomName}"
-            tool:noLogoDescription="7일동안의 산타 마니또 종료!\n나의 산타 마니또는 누구일까?"
-            tool:noLogoTitle="마니또 방 이름" />
+            app:santaTitle="@{viewModel.roomName}"
+            tool:santaDescription="7일동안의 산타 마니또 종료!\n나의 산타 마니또는 누구일까?"
+            tool:santaTitle="마니또 방 이름" />
 
         <View
             android:id="@+id/view_finish_guideline"
