--- a/app/src/main/res/layout/santa_background.xml
+++ b/app/src/main/res/layout/santa_background.xml
@@ -26,6 +26,7 @@
             android:elevation="@dimen/elevation_shadow"
             android:scaleType="centerInside"
             android:src="@drawable/ic_snow"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +54,7 @@
             android:elevation="@dimen/elevation_shadow"
             android:scaleType="centerInside"
             android:src="@drawable/ic_logo"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -68,6 +70,7 @@
             android:textColor="@color/white"
             android:textFontWeight="700"
             android:textSize="@dimen/size_santabackground_text"
+            android:visibility="gone"
             app:fontWeight="700"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/imageview_santabackground_santahead"
@@ -81,6 +84,7 @@
             android:layout_marginEnd="@dimen/margin_santabackground_santahead_end"
             android:elevation="@dimen/elevation_shadow"
             android:src="@drawable/ic_santa_head_long"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -90,6 +94,7 @@
             android:layout_height="wrap_content"
             android:elevation="@dimen/elevation_shadow"
             android:src="@drawable/ic_santa_widht_chimney"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -100,6 +105,7 @@
             android:layout_marginBottom="@dimen/margin_santabackground_snowman_bottom"
             android:elevation="@dimen/elevation_shadow"
             android:src="@drawable/ic_snowman"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -112,14 +118,10 @@
             android:layout_marginBottom="@dimen/margin_santabackground_snowman_bottom"
             android:elevation="@dimen/elevation_shadow"
             android:src="@drawable/ic_rudolf"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.constraintlayout.widget.Group
-            android:id="@+id/group_santabackground_rudolfnsnowman"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:constraint_referenced_ids="imageview_santabackground_rudolf, imageview_santabackground_snowman" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/textview_santabackground_title"
@@ -128,15 +130,16 @@
             android:layout_marginStart="@dimen/padding_entire"
             android:layout_marginBottom="@dimen/margin_santabakcground_title"
             android:elevation="@dimen/elevation_shadow"
-            tool:text="@string/createmission_background_title"
             android:textColor="@color/white"
             android:textFontWeight="700"
             android:textSize="@dimen/size_santabackground_title"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/textview_santabackground_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            tool:text="@string/createmission_background_title" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/textview_santabackground_description"
@@ -146,16 +149,11 @@
             android:elevation="@dimen/elevation_shadow"
             android:textColor="@color/white"
             android:textSize="@dimen/size_santabackground_description"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/textview_santabackground_title"
             app:layout_constraintTop_toBottomOf="@id/textview_santabackground_title"
             tool:text="@string/createmission_background_description" />
-
-        <androidx.constraintlayout.widget.Group
-            android:id="@+id/group_santabackground_titledescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:constraint_referenced_ids="textview_santabackground_title, textview_santabackground_description"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
