--- a/app/src/main/res/navigation/navigation_create_room.xml
+++ b/app/src/main/res/navigation/navigation_create_room.xml
@@ -13,6 +13,10 @@
         <action
             android:id="@+id/action_createRoomFragment_to_createMissionsFragment"
             app:destination="@id/createMissionsFragment" />
+        <argument
+            android:name="roomId"
+            app:argType="integer"
+            android:defaultValue="-1" />
     </fragment>
 
     <fragment
