--- a/app/src/main/res/layout/fragment_waiting_room.xml
+++ b/app/src/main/res/layout/fragment_waiting_room.xml
@@ -49,7 +49,7 @@
             android:layout_marginHorizontal="@dimen/padding_entire"
             android:layout_marginTop="@dimen/margin_cardview_to_guidline_top"
             android:layout_marginBottom="@dimen/margin_waitingroom_cardview_bottom"
-            app:layout_constraintBottom_toTopOf="@id/santabottombutton_waitingroom_modify"
+            app:layout_constraintBottom_toTopOf="@id/linearlayout_waitingroom_buttons"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_waitingroom_guideline"
@@ -143,29 +143,33 @@
 
         </org.sopt.santamanitto.view.SantaCardView>
 
-        <org.sopt.santamanitto.view.SantaBottomButton
-            android:id="@+id/santabottombutton_waitingroom_modify"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_entire"
-            android:layout_marginBottom="@dimen/margin_matched_buttons"
-            android:text="@string/waitingroom_modify"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/santabottombutton_waitingroom_match"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <org.sopt.santamanitto.view.SantaBottomButton
-            android:id="@+id/santabottombutton_waitingroom_match"
+        <LinearLayout
+            android:id="@+id/linearlayout_waitingroom_buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_entire"
             android:layout_marginBottom="@dimen/margin_bottombutton_bottom"
-            android:enabled="@{viewModel.canStart}"
-            android:text="@string/waitingroom_bottombutton"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <org.sopt.santamanitto.view.SantaBottomButton
+                android:id="@+id/santabottombutton_waitingroom_modify"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_matched_buttons"
+                android:text="@string/waitingroom_modify"
+                android:visibility="@{viewModel.isAdmin() ? View.VISIBLE : View.GONE}" />
+
+            <org.sopt.santamanitto.view.SantaBottomButton
+                android:id="@+id/santabottombutton_waitingroom_match"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:enabled="@{viewModel.canStart}"
+                android:text="@string/waitingroom_bottombutton" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
